fix overlap

--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ h4{
     filter: grayscale(0.8);
 }
 .backFour{
-    height: 70vh;
+    min-height: 70vh;
     background-image: url('assets/back44-min.jpg');
     background-size: cover;
     background-position: center;
